--- a/second_project/countopedia/public/index.html
+++ b/second_project/countopedia/public/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
